# Adversarial_Attacks_detector

./: .gitignore  README.md  experiments.ipynb  experiments.py  hello.py  layer1_linear_probe.pth  layer2_linear_probe.pth  layer3_linear_probe.pth  layer4_linear_probe.pth  pyproject.toml  utils.py
advattdetection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
results/fgsm+blur/blur1.0/resnet101/: probes_accuracy.json
results/fgsm+blur/blur1.0/resnet152/: accuracy.json  probes_accuracy.json
results/fgsm+blur/blur1.0/resnet18/: accuracy.json  probes_accuracy.json
results/fgsm+blur/blur1.0/resnet34/: accuracy.json  probes_accuracy.json
results/fgsm+blur/blur1.0/resnet50/: accuracy.json  probes_accuracy.json
results/fgsm+blur/blur2.0/resnet101/: accuracy.json  probes_accuracy.json
results/fgsm+blur/blur2.0/resnet18/: accuracy.json  probes_accuracy.json
results/fgsm+blur/blur3.0/resnet50/: accuracy.json  probes_accuracy.json
results/fgsm+blur/blur5.0/resnet50/: accuracy.json  probes_accuracy.json
results/fgsm/resnet101/: accuracy.json  probes_accuracy.json
results/fgsm/resnet152/: accuracy.json  probes_accuracy.json
results/fgsm/resnet18/: accuracy.json  probes_accuracy.json
results/fgsm/resnet34/: probes_accuracy.json
results/fgsm/resnet50/: accuracy.json  probes_accuracy.json
results/fgsm/resnet50_1/: probes_accuracy.json
